@@ -121,7 +121,7 @@ class Name(BaseObject,PrivacyBase,SourceBase,NoteBase,DateBase):
          self.first_name,self.surname,self.suffix,self.title,
          name_type,self.prefix,self.patronymic,self.sname,
          self.group_as,self.sort_as,self.display_as) = data
-        self.type = NameType(name_type)
+        self.type.unserialize(name_type)
         PrivacyBase.unserialize(self,privacy)
         SourceBase.unserialize(self,source_list)
         NoteBase.unserialize(self,note)
